--- a/pom.xml
+++ b/pom.xml
@@ -29,17 +29,17 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.9.1</version>
+			<version>2.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.4.15</version>
+			<version>4.4.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.13</version>
+			<version>4.5.14</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-to-slf4j</artifactId>
-			<version>2.18.0</version>
+			<version>2.20.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -63,13 +63,13 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.openstack4j.core</groupId>
-			<artifactId>openstack4j-core</artifactId>
-			<version>3.11-SNAPSHOT</version>
+			<artifactId>ubi-openstack4j-core</artifactId>
+			<version>3.11</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.openstack4j.core.connectors</groupId>
-			<artifactId>openstack4j-httpclient</artifactId>
-			<version>3.11-SNAPSHOT</version>
+			<artifactId>ubi-openstack4j-httpclient</artifactId>
+			<version>3.11</version>
 		</dependency>
 	</dependencies>
 
