--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.juniper.contrail</groupId>
 	<artifactId>ubi-juniper-contrail-api</artifactId>
-	<version>3.0-SNAPSHOT</version>
+	<version>3.0</version>
 	<packaging>jar</packaging>
 	<name>juniper-contrail-api</name>
 	<url>http://maven.apache.org</url>
 	<scm>
 		<developerConnection>scm:git:https://github.com/openmsa/contrail-java-api.git</developerConnection>
-	</scm>
+	  <tag>ubi-juniper-contrail-api-3.0</tag>
+  </scm>
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
@@ -127,6 +128,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>3.0.0</version>
@@ -139,6 +141,7 @@
 					</filesets>
 				</configuration>
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -196,7 +199,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
