--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.juniper.contrail</groupId>
 	<artifactId>ubi-juniper-contrail-api</artifactId>
-	<version>3.0</version>
+	<version>3.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>juniper-contrail-api</name>
 	<url>http://maven.apache.org</url>
 	<scm>
 		<developerConnection>scm:git:https://github.com/openmsa/contrail-java-api.git</developerConnection>
-	  <tag>ubi-juniper-contrail-api-3.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<distributionManagement>
 		<repository>
