--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<!--
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>32.0.1-jre</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -46,24 +48,9 @@
 			<version>4.5.14</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-exec</artifactId>
-			<version>1.3</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-to-slf4j</artifactId>
 			<version>2.20.0</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.openstack4j.core</groupId>
@@ -75,13 +62,27 @@
 			<artifactId>ubi-openstack4j-httpclient</artifactId>
 			<version>3.11</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
-		<defaultGoal>package</defaultGoal>
-		<directory>target</directory>
-		<sourceDirectory>src</sourceDirectory>
-		<testSourceDirectory>test</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -131,11 +132,13 @@
 				<version>2.20</version>
 				<configuration>
 					<argLine>-Xmx1024m</argLine>
+					<!--
 					<excludes>
 						<exclude>**/ContrailApiTest.java</exclude>
 						<exclude>**/ContrailApiMockTest.java</exclude>
 						<exclude>**/ApiTestCommon.java</exclude>
 					</excludes>
+					-->
 				</configuration>
 			</plugin>
 		</plugins>
