--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,6 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>32.1.3-jre</version>
-		</dependency>
-		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
@@ -48,12 +43,12 @@
 		<dependency>
 			<groupId>com.github.openstack4j.core</groupId>
 			<artifactId>ubi-openstack4j-core</artifactId>
-			<version>3.11</version>
+			<version>3.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.openstack4j.core.connectors</groupId>
 			<artifactId>ubi-openstack4j-httpclient</artifactId>
-			<version>3.11</version>
+			<version>3.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
